# phaser

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: api.md  conf.py  dev.md  index.md  index.rst
docs/user/: advanced.md  cli.md  concepts.md  install.md  usage.md
phaser/: __init__.py  __main__.py  builtin_steps.py  column.py  constants.py  context.py  differ.py  exceptions.py  io.py  phase.py  pipeline.py  records.py  steps.py  table_diff.py  util.py
phaser/cli/: __init__.py  command.py  main.py
phaser/cli/commands/: __init__.py  debug.py  describe.py  diff.py  run.py
tests/: conftest.py  fixtures.py  steps.py  test_basics.py  test_builtin_steps.py  test_columns.py  test_command_run.py  test_context.py  test_csv.py  test_differ.py  test_employee_example.py  test_end_to_end.py  test_error_handling.py  test_extra_ios.py  test_extra_mapping.py  test_extra_records.py  test_helper_features_for_outputs_and_sources.py  test_json.py  test_multi_source_and_outputs.py  test_phase.py  test_pipe_outputs_to_inputs.py  test_pipeline.py  test_record_metadata.py  test_records.py  test_reshape.py  test_steps.py  test_table_diff.py  test_unicode_end_to_end.py
tests/factories/: phase.py
tests/fixture_files/: crew.csv  currency_names.csv  departments.csv  employees.csv  exchange_rates.csv  languages.csv  locations.csv  more-employees.csv  runner-test.csv
tests/fixtures/: employees.csv
tests/pipelines/: employees.py  families.py  multi_source_and_outputs.py  nopipelinehere.py  passthrough.py
(+2 files in other folders)
