[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phaser"
version = "0.1"
authors = [
    {name="Jeff Kolesky", email="jeffkole@gmail.com"},
    {name="Lisa Dusseault", email="lisa@rtfm.com"}
]
requires-python = ">=3.11"
readme = "README.md"
description = "A work-in-progress framework and utilities for the transform part of data pipelines"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]